-Fix Rank with same points and solved -Unveiling team always on the top (Fix Z-Index) -Can click to open the pinning problem -Window scroll along the team position while moving -Highlight the unveiling team with box-shadow

--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,10 @@ tr{
 }
 .container{
 }
+
+.shadow {
+    -webkit-box-shadow: 0px 0px 10px 2px black;
+    -moz-box-shadow: 0px 0px 10px 2px black;
+    box-shadow: 0px 0px 10px 2px black;
+    transition: all 1s ease;
+}
